--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "eslint-config-next": "13.4.16",
     "next": "13.4.16",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-datepicker": "^4.16.0",
+    "react-dom": "18.2.0",
+    "styled-components": "^6.0.7"
   }
 }
