--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "date-fns": "^2.30.0",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.16",
+    "moment": "^2.29.4",
     "next": "13.4.16",
     "react": "18.2.0",
     "react-datepicker": "^4.16.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
     "styled-components": "^6.0.7"
   }
 }
